Velcro test First SandBox/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Opportunity.Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number – Oracle Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Default_Freight_Terms__c</fullName>
        <description>Default Account Freight terms</description>
        <formula>Opportunity.Account.Freight_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yo can use the default Account Freight terms in new quotes</inlineHelpText>
        <label>Account Default Freight Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Default_Payment_Terms__c</fullName>
        <description>default Account payment terms</description>
        <formula>Opportunity.Account.Payment_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yo can use the default Account payment terms in new quotes</inlineHelpText>
        <label>Account Default Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abrasive</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Airbag</fullName>
                </value>
                <value>
                    <fullName>Ankle Brace</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Arm Brace</fullName>
                </value>
                <value>
                    <fullName>Armor</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Back Brace</fullName>
                </value>
                <value>
                    <fullName>Back Support</fullName>
                </value>
                <value>
                    <fullName>Bladder</fullName>
                </value>
                <value>
                    <fullName>BP Cuff</fullName>
                </value>
                <value>
                    <fullName>Brace</fullName>
                </value>
                <value>
                    <fullName>Cable Strap</fullName>
                </value>
                <value>
                    <fullName>CargoMgt</fullName>
                </value>
                <value>
                    <fullName>Carpet</fullName>
                </value>
                <value>
                    <fullName>Catheter</fullName>
                </value>
                <value>
                    <fullName>Diaper</fullName>
                </value>
                <value>
                    <fullName>Drapes</fullName>
                </value>
                <value>
                    <fullName>DVT Cuff</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electrial Wire</fullName>
                </value>
                <value>
                    <fullName>ExtTrim</fullName>
                </value>
                <value>
                    <fullName>Fetal Monitors</fullName>
                </value>
                <value>
                    <fullName>Floor Mat</fullName>
                </value>
                <value>
                    <fullName>Foot Wear</fullName>
                </value>
                <value>
                    <fullName>Headgear</fullName>
                </value>
                <value>
                    <fullName>Headliner</fullName>
                </value>
                <value>
                    <fullName>Helmet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_Status__c</fullName>
        <formula>IF( Opportunity.Account.RecordType.DeveloperName = &quot;Non_Customer&quot;, TEXT( Opportunity.Account.Direct_Sales_Status__c ), &quot;Customer Account&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Sales Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fright_terms__c</fullName>
        <label>Fright terms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Language__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>015D350</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>025D350</fullName>
                </value>
                <value>
                    <fullName>025D500</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
                <value>
                    <fullName>0315</fullName>
                </value>
                <value>
                    <fullName>032</fullName>
                </value>
                <value>
                    <fullName>033</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>0D6000</fullName>
                </value>
                <value>
                    <fullName>3RD PARTY BILLING</fullName>
                </value>
                <value>
                    <fullName>AGENCIA</fullName>
                </value>
                <value>
                    <fullName>AGENCIA CAMION</fullName>
                </value>
                <value>
                    <fullName>AIRFREIGHT</fullName>
                </value>
                <value>
                    <fullName>BLCUSTOMER PICK UP</fullName>
                </value>
                <value>
                    <fullName>BLFREEHOUSE</fullName>
                </value>
                <value>
                    <fullName>BLFREEHOUSE250_25_15</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>BLFREEHOUSE350P12.5</fullName>
                </value>
                <value>
                    <fullName>BLFREEHOUSE350P15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_to_Delivery__c</fullName>
        <formula>(Quote_Provided_Date__c  -  Quote_Requested_Date__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours to Delivery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InCoTerm_Locations__c</fullName>
        <description>Used with Incoterms picklist, is required to provide a delivery location</description>
        <inlineHelpText>Used with Incoterms picklist, is required to provide a delivery location</inlineHelpText>
        <label>InCoTerm Locations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language of the  quote template</description>
        <inlineHelpText>Choose the language used to generate the quote according to the customer preferences.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Opportunity.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes_To_Delivery__c</fullName>
        <formula>Hours_to_Delivery__c * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes To Delivery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Account_Status__c</fullName>
        <formula>TEXT(Opportunity.Direct_Sales_Request__c)</formula>
        <label>New Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_quote_lines__c</fullName>
        <description>Sum of total lines in the quote</description>
        <label>Number of quote lines</label>
        <summaryForeignKey>Quote_Line__c.quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <formula>Opportunity.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Phone__c</fullName>
        <formula>Opportunity.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity.Owner.FirstName &amp; &quot; &quot; &amp;  Opportunity.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <formula>Opportunity.Account.Org__c</formula>
        <label>Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDR__c</fullName>
        <formula>Opportunity.PDR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDR#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>How the customer will pay</description>
        <inlineHelpText>How the customer will pay</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Language__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anticipated</fullName>
                </value>
                <value>
                    <fullName>Bank Draft</fullName>
                </value>
                <value>
                    <fullName>Bank Receipt</fullName>
                </value>
                <value>
                    <fullName>Bank_Transfer</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Confirming</fullName>
                </value>
                <value>
                    <fullName>Direct Remittance</fullName>
                </value>
                <value>
                    <fullName>Promissory Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Language__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>0 days</fullName>
                </value>
                <value>
                    <fullName>10 days</fullName>
                </value>
                <value>
                    <fullName>15 days</fullName>
                </value>
                <value>
                    <fullName>20 days</fullName>
                </value>
                <value>
                    <fullName>40 days</fullName>
                </value>
                <value>
                    <fullName>45 days</fullName>
                </value>
                <value>
                    <fullName>55 days</fullName>
                </value>
                <value>
                    <fullName>70 days</fullName>
                </value>
                <value>
                    <fullName>75 days</fullName>
                </value>
                <value>
                    <fullName>77 days</fullName>
                </value>
                <value>
                    <fullName>85 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>AF Prepayment</fullName>
                </value>
                <value>
                    <fullName>At Sight</fullName>
                </value>
                <value>
                    <fullName>CASH IN ADVANCE</fullName>
                </value>
                <value>
                    <fullName>EOM 15 day</fullName>
                </value>
                <value>
                    <fullName>Usual Payment Terms</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>IT ANTICIPATO</fullName>
                </value>
                <value>
                    <fullName>IT 30 GG DF</fullName>
                </value>
                <value>
                    <fullName>IT 30 GG FM10</fullName>
                </value>
                <value>
                    <fullName>IT 30GGF.M.</fullName>
                </value>
                <value>
                    <fullName>IT 60 GG DF</fullName>
                </value>
                <value>
                    <fullName>IT 60 GG FM10</fullName>
                </value>
                <value>
                    <fullName>IT 60GGF.M.</fullName>
                </value>
                <value>
                    <fullName>T/T after 30Day</fullName>
                </value>
                <value>
                    <fullName>T/T IN ADVANCE</fullName>
                </value>
                <value>
                    <fullName>60 Days T/T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_Quote__c</fullName>
        <inlineHelpText>*Name
*Email
*Phone</inlineHelpText>
        <label>Primary Contact for Quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>For Email Template (DR)</description>
        <formula>Opportunity.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Annual_Volume__c</fullName>
        <description>Quote Annual Volume</description>
        <inlineHelpText>Quote Annual Volume</inlineHelpText>
        <label>Quote Annual Volume</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration_Date__c</fullName>
        <defaultValue>IF( $User.Region__c=&apos;EMEA&apos;, TODAY()+60,null)</defaultValue>
        <inlineHelpText>Defaults to 60 days from Quote Provided Date</inlineHelpText>
        <label>Quote Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Packaging__c</fullName>
        <description>Packaging remarks</description>
        <inlineHelpText>Packaging remarks</inlineHelpText>
        <label>Quote Packaging</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Provided_Date__c</fullName>
        <label>Quote Provided Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Requested_Date__c</fullName>
        <label>Quote Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By_Customer__c</fullName>
        <label>Requested By Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>text(Opportunity.Account.SBU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Project__c</fullName>
        <formula>text( Opportunity.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>incoTerms__c</fullName>
        <description>For international shipments, use one of the standar incoterm.</description>
        <label>InCoTerms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EXW (Ex-Works)</fullName>
                </value>
                <value>
                    <fullName>FCA (Free Carrier)</fullName>
                </value>
                <value>
                    <fullName>CPT (Carriage Paid To)</fullName>
                </value>
                <value>
                    <fullName>CIP (Carriage and Insurance Paid)</fullName>
                </value>
                <value>
                    <fullName>DAT (Delivered at Terminal)</fullName>
                </value>
                <value>
                    <fullName>DAP (Delivered at Place)</fullName>
                </value>
                <value>
                    <fullName>DDP (Delivered Duty Paid)</fullName>
                </value>
                <value>
                    <fullName>FAS (Free alongside Ship)</fullName>
                </value>
                <value>
                    <fullName>FOB (Free On Board)</fullName>
                </value>
                <value>
                    <fullName>CFR (Cost and Freight)</fullName>
                </value>
                <value>
                    <fullName>CIF (Cost, Insurance and Freight)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>EMEA_Quotes</fullName>
        <columns>QUOTE.QUOTENUMBER</columns>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Language__c</columns>
        <columns>QUOTE.DESCRIPTION</columns>
        <columns>Quote_Provided_Date__c</columns>
        <columns>Quote_Expiration_Date__c</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_ID__c</field>
            <operation>equals</operation>
            <value>ABE,APL,VESA,VGMBH,VIF,VEIT</value>
        </filters>
        <label>EMEA Quotes</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_EMEA_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>EMEA_Quote</fullName>
        <active>true</active>
        <description>EMEA Quote</description>
        <label>EMEA Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Quote_with_Approval</fullName>
        <active>true</active>
        <description>EMEA Quotes with amanger approval needed</description>
        <label>EMEA Quote with Approval</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Freight_or_Incoterms_used</fullName>
        <active>false</active>
        <description>check that one of both ,freight terms or incoterms, and only one, is used.</description>
        <errorConditionFormula>OR
(
AND
 ( 
 $User.Region__c =&apos;EMEA&apos;,
 ISPICKVAL(incoTerms__c,&apos;&apos;), 
 ISPICKVAL(Fright_terms__c ,&apos;&apos;)  
 )
,
AND 
  ( 
   $User.Region__c  =&apos;EMEA&apos;, 
   NOT(ISBLANK(TEXT(incoTerms__c))),
   NOT(ISBLANK(TEXT(Fright_terms__c)))
  ) 

)</errorConditionFormula>
        <errorMessage>check that one of both FIELDS Freight terms or incotTerms, and only one, is used.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_Rejected</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Status, &quot;Rejected&quot;) &amp;&amp;    ISBLANK(Rejected_Reason__c)</errorConditionFormula>
        <errorDisplayField>Rejected_Reason__c</errorDisplayField>
        <errorMessage>Please include a Rejected Reason</errorMessage>
    </validationRules>
</CustomObject>